change grow sentences

--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -470,30 +470,30 @@
   <div class="container">
     <div class="row">
       <div class="col text-center">
-        <h2 key="growTitle" class="tm-section-title">Güveninizle büyüyoruz!</h2>
-        <p key="growText" class="tm-text tm-font-semibold px-5 pr-5">
-          40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second tm-font-semibold">Dialysing<span class="tm-color-primary">.com</span></span> ile yapabilirsiniz
+        <h2 key="growTitle" class="tm-section-title">Güveninizle Büyüyoruz!</h2>
+        <p key="growText" class="tm-text px-5 pr-5">
+          Dünya genelindeki 30’dan fazla ülkede yer alan 4.000’den fazla diyaliz merkezi ve kliniği hakkında kendi dilinizde hizmet alarak kolay ve güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second fw-bold">Dialysing<span class="tm-color-primary">.com</span></span> ile yapabilirsiniz
         </p>
-        <div class="tm-center">
+        <div class="tm-center p-2">
           <div class="circle-content m-2">
-            <img src="../user/img/icons/map.png" alt="Icon Map" />
-            <div class="clinic-number">40+</div>
+            <img src="../user/img/icons/map.png" width="100%" alt="Icon Map" />
+            <div class="clinic-number">30+</div>
             <div class="clinic-prop">Ülke</div>
           </div>
           <div class="circle-content m-2">
-            <img src="../user/img/icons/language.png" alt="Icon Language" />
-            <div class="clinic-number">20+</div>
+            <img src="../user/img/icons/language.png" width="100%" alt="Icon Language" />
+            <div class="clinic-number">10+</div>
                 <div class="clinic-prop">Dil</div>
           </div>
           <div class="circle-content m-2">
-            <img src="../user/img/icons/hospital.png" alt="Icon Hospital" />
-            <div class="clinic-number">10+</div>
+            <img src="../user/img/icons/hospital.png" width="100%" alt="Icon Hospital" />
+            <div class="clinic-number">4000+</div>
                 <div class="clinic-prop">Klinik</div>
           </div>
           <div class="circle-content m-2">
-            <img src="../user/img/icons/hospital-2.png" alt="Icon Hospital 2" />
-            <div class="clinic-number">12</div>
-                <div class="clinic-prop">Dernek</div>
+            <img src="../user/img/icons/hospital-2.png" width="100%" alt="Icon Hospital 2" />
+            <div class="clinic-number">8+</div>
+                <div class="clinic-prop">STK</div>
           </div>
         </div>
       </div>
