--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -129,7 +129,7 @@
           <a href="/gfr-calculator"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
           <div class="tm-box-content">
             <div key="articleSubTitle5" class="tm-box-title">GFR Hesaplama</div>
-            <div key="articlesSubText5" class="tm-box-text">Eget ut netus aliquet platea auctor volutpat est dictum mattis ac enim eget duis sit a, ac urna, tortor tincidunt mauris adipiscing facilisis ultricies aliquet sit imperdiet non sed lectus</div>
+            <div key="articlesSubText5" class="tm-box-text">Glomerüler filtrasyon hızı (GFR), böbreklerin ne kadar iyi performans gösterdiğini değerlendirmek için kullanılan bir testtir. </div>
           </div>
         </div>
       </div>
