--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -207,15 +207,14 @@
       <div key="suggestionTitle" class="tm-section-title">Önerilen Diyaliz Merkezleri</div>
     </div>
 
-    <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 g-3 mb-3">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-5 g-3 mb-3">
       
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <a href="./clinic/clinic.html"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" /></a>
+            <a href="./clinic/clinic.html"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" /></a>
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h5 class="tm-box-title">Türkmed</h5>
-              <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
+              <div class="tm-box-title p-2">Türkmed <span key="likedText">Diyaliz Merkezi</span></div> 
             </div>
           </div>
         </div>
@@ -224,10 +223,9 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
+            <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h5 class="tm-box-title">Sultanbeyli</h5>
-              <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
+              <div class="tm-box-title p-2">Sultanbeyli <span key="likedText">Diyaliz Merkezi</span></div>  
             </div>
           </div>
         </div>
@@ -236,10 +234,9 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Avrupa" />
+            <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom İstanbul - Avrupa" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Bodrum</h4>
-              <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
+              <div class="tm-box-title p-2">Bodrum <span key="likedText">Diyaliz Merkezi</span></div> 
             </div>
           </div>
         </div>
@@ -248,10 +245,9 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Anadolu" />
+            <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom İstanbul - Anadolu" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Karşıyaka</h4>
-              <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
+              <div class="tm-box-title p-2">Karşıyaka <span key="likedText">Diyaliz Merkezi</span></div> 
             </div>
           </div>
         </div>
@@ -260,10 +256,9 @@
       <div class="col col-five">
         <div class="card">
           <div class="position-relative">
-            <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
+            <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Milas</h4>
-              <p key="suggestion" class="tm-box-text">Diyaliz Merkezi</p>
+              <div class="tm-box-title p-2">Milas <span key="likedText">Diyaliz Merkezi</span></div> 
             </div>
           </div>
         </div>
