add motto sentences on footer

--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -7,7 +7,7 @@
           <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="../index.html">Dialysing<span>.com</span></a>
         </h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2">’Diyalize girenlerin diledikleri an ve güvenle tatil yapabilecekleri, dünyayı özgürce dolaşabilecekleri bir gelecek inşa etmek için çalışıyoruz. </li>
+          <li class="nav-item mb-2">Diyalize girenlerin diledikleri an ve güvenle tatil yapabilecekleri, dünyayı özgürce dolaşabilecekleri bir gelecek inşa etmek için çalışıyoruz. </li>
           <li class="nav-item social mb-2">
             <img src="../user/img/socials/facebook.png" alt="" />
             <img src="../user/img/socials/instagram.png" alt="" />
