add password eye on index login

--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -127,8 +127,8 @@
                           </div>
                           <div class="form-group password">
                             <label key="password" for="login-password">Şifrenizi Giriniz</label>
-                             <input type="password" class="form-control" id="password" name="password" placeholder="Şifreniz" />
-                            <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                             <input type="password" class="form-control sifre" name="sifre" placeholder="Şifreniz" />
+                            <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                            </div>
                            <div class="links d-flex justify-content-between">
                             <div class="form-group not-border checkbox">
