--- a/src/views/user/layouts/index.ejs
+++ b/src/views/user/layouts/index.ejs
@@ -39,7 +39,7 @@
     <%- include("../partials/footer")  %> 
 
     
-
+    <script src="./user/js/password.js"></script>
     <!-- Location -->
     <script src="./user/js/location.js"></script>
     <!-- Bootstrap 5 -->
