--- a/src/views/clinic-panel/layouts/index.ejs
+++ b/src/views/clinic-panel/layouts/index.ejs
@@ -31,6 +31,8 @@
     <%- body %>
     <%- include("../partials/footer") %>
 
+
+    <script src="../user/js/password.js"></script>
     <script src="../user/js/location.js"></script>
     <!-- Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
