change panel navbar user icon remove

--- a/src/views/clinic-panel/partials/navbar.ejs
+++ b/src/views/clinic-panel/partials/navbar.ejs
@@ -67,7 +67,7 @@
         </button>
         <div id="mainNav" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto mb-3">
-            <li class="nav-item language-selection mt-2 mt-2">
+            <li class="nav-item language-selection mx-3 mt-2 mt-2">
               <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
               <div class="tm-form-element tm-form-element-2">
                 <select name="language" class="form-control tm-select" id="language">
@@ -77,7 +77,7 @@
                 </select>
               </div>
             </li>
-            <li class="nav-item ms-auto name mx-3 mt-2 text-white">
+            <!-- <li class="nav-item ms-auto name mx-3 mt-2 text-white">
 
               <a href="/panel"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-person-fill" viewBox="0 0 16 16">
@@ -85,7 +85,7 @@
                 </svg>
                 
               </a>
-            </li>
+            </li> -->
             <li class="nav-item buttons mx-2 mt-2">
               <a href="/panel" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
