change card paragraf

--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -117,57 +117,12 @@
           <div class="position-relative">
             <a href="./clinic/<%- element._id %>"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" /></a>
             <div class="position-absolute bottom-0 start-0 px-2">
-              <div class="tm-box-title p-2"><%- element.companyInformation.companyName  %> <span key="likedText">Diyaliz Merkezi</span></div> 
+              <div class="tm-box-title p-2"><%- element.companyInformation.companyName  %></div> 
             </div>
           </div>
         </div>
       </div>
       <% }) %>
-
-
-      <!-- <div class="col col-five">
-        <div class="card">
-          <div class="position-relative">
-            <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" />
-            <div class="position-absolute bottom-0 start-0 px-2">
-              <div class="tm-box-title p-2">Sultanbeyli <span key="likedText">Diyaliz Merkezi</span></div>  
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-five">
-        <div class="card">
-          <div class="position-relative">
-            <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom İstanbul - Avrupa" />
-            <div class="position-absolute bottom-0 start-0 px-2">
-              <div class="tm-box-title p-2">Bodrum <span key="likedText">Diyaliz Merkezi</span></div> 
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-five">
-        <div class="card">
-          <div class="position-relative">
-            <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom İstanbul - Anadolu" />
-            <div class="position-absolute bottom-0 start-0 px-2">
-              <div class="tm-box-title p-2">Karşıyaka <span key="likedText">Diyaliz Merkezi</span></div> 
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col col-five">
-        <div class="card">
-          <div class="position-relative">
-            <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="300" alt="Custom Ankara" />
-            <div class="position-absolute bottom-0 start-0 px-2">
-              <div class="tm-box-title p-2">Milas <span key="likedText">Diyaliz Merkezi</span></div> 
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
 </div>
@@ -239,7 +194,7 @@
         <div class="tm-box">
           <a href="./clinic/<%- element._id %>"><img src="../user/img/custom/liked-i.png" alt="Custom Liked I" /></a>
           <div class="tm-box-content">
-            <div class="tm-box-title"><%- element.companyInformation.companyName %><span key="likedText">Diyaliz Merkezi</span></div>
+            <div class="tm-box-title"><%- element.companyInformation.companyName %></div>
             <div class="score">
               <div class="point">5.0</div>
               <i class="bi bi-star-fill"></i>
@@ -256,7 +211,7 @@
         <div class="tm-box">
           <a href="./clinic/<%- element._id %>"><img src="../user/img/custom/liked-vi.png" alt="Custom Liked VI" /></a>
           <div class="tm-box-content">
-            <div class="tm-box-title"><%- element.companyInformation.companyName %><span key="likedText">Diyaliz Merkezi</span></div>
+            <div class="tm-box-title"><%- element.companyInformation.companyName %></div>
             <div class="score">
               <div class="point">5.0</div>
               <i class="bi bi-star-fill"></i>
