--- a/src/views/admin/layouts/auth.ejs
+++ b/src/views/admin/layouts/auth.ejs
@@ -61,6 +61,8 @@
       </div>
     </div>
 
+    <script src="./user/js/password.js"></script>
+    
     <!-- Jquery js-->
     <script src="../admin/js/vendors/jquery-3.5.1.min.js"></script>
 
