--- a/src/views/admin/layouts/index.ejs
+++ b/src/views/admin/layouts/index.ejs
@@ -128,7 +128,8 @@
   <script src="../admin/plugins/datatable/responsive.bootstrap4.min.js"></script>
   <script src="../admin/js/datatables.js"></script>
 
-
+  <script src="./user/js/password.js"></script>
+  
 	<!-- Custom js-->
 	<script src="../admin/js/custom.js"></script>
 </body>
