--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -58,7 +58,7 @@
 
   <!-- container-scroller -->
   <!-- Cleander -->
-  <!-- <script src="../user/js/cleander.js"></script> -->
+  <script src="./user/js/password.js"></script>
   <!-- Bootstrap 5 -->
   <script src="../user/js/location.js"></script>
   <script src="../user/js/upload-image-remove.js"></script>
