--- a/src/views/user/layouts/user.ejs
+++ b/src/views/user/layouts/user.ejs
@@ -25,6 +25,7 @@
 
     <%- include("../partials/footer")  %> 
 
+    <script src="./user/js/password.js"></script>
     <!-- Location -->
     <script src=".../user/js/location.js"></script>
     <!-- Bootstrap JS -->
