--- a/src/views/user/layouts/blog.ejs
+++ b/src/views/user/layouts/blog.ejs
@@ -40,7 +40,9 @@
         <%- include("../partials/footer") %>
     
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="./user/js/password.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.   min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q   +8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- load JS files -->
     <script src="../user/js/jquery-1.11.3.min.js"></script>
     <script src="../user/js/popper.min.js"></script>
