--- a/src/views/user/layouts/clinic-all-view.ejs
+++ b/src/views/user/layouts/clinic-all-view.ejs
@@ -30,7 +30,7 @@
 
   <%- body %>
 
-    <!-- <script src="../user/js/selected-sgk.js"></script> -->
+   <script src="./user/js/password.js"></script>
     <!-- Location -->
     <script src="../user/js/location.js"></script>
     <!-- Bootstrap 5 -->
