--- a/src/views/user/layouts/clinic-main-index.ejs
+++ b/src/views/user/layouts/clinic-main-index.ejs
@@ -29,7 +29,8 @@
 <body>
 
   <%- body %>
-
+  
+    <script src="./user/js/password.js"></script>
     <script src="../user/js/selected-sgk.js"></script>
     <!-- Location -->
     <script src="../user/js/location.js"></script>
