--- a/src/views/user/layouts/clinic-main.ejs
+++ b/src/views/user/layouts/clinic-main.ejs
@@ -28,6 +28,7 @@
 
   <%- body %>
 
+  <script src="./user/js/password.js"></script>
     <script src="../user/js/selected-sgk.js"></script>
     <!-- Location -->
     <script src="../user/js/location.js"></script>
