add password secret

--- a/src/views/user/partials/top-navbar-blog.ejs
+++ b/src/views/user/partials/top-navbar-blog.ejs
@@ -71,10 +71,10 @@
                                     placeholder="Email Adresiniz">
                             </div>
                             <div class="form-group password">
-                                <label for="login-password">Şifrenizi Giriniz</label>
-                                <input type="password" class="form-control" id="login-password" placeholder="Şifreniz">
-                                <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
-                            </div>
+                                <label key="password" for="login-password">Şifrenizi Giriniz</label>
+                                 <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
+                                <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                               </div>
                             <div class="links">
                                 <div class="form-group not-border checkbox">
                                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
