--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -127,7 +127,7 @@
                           </div>
                           <div class="form-group password">
                             <label key="password" for="login-password">Şifrenizi Giriniz</label>
-                             <input type="password" class="form-control sifre" name="sifre" placeholder="Şifreniz" />
+                             <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
                             <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                            </div>
                            <div class="links d-flex justify-content-between">
