--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -1,14 +1,13 @@
-<!--======= FOOTER =====-->
 <footer>
   <div class="container footer">
     <div class="row pt-5">
       <div class="col-lg-4 mb-5">
         <h5>
-          <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="../index.html">Dialysing<span>.com</span></a>
+          <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="/">Dialysing<span>.com</span></a>
         </h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-2">Diyalize girenlerin diledikleri an ve güvenle tatil yapabilecekleri, dünyayı özgürce dolaşabilecekleri bir gelecek inşa etmek için çalışıyoruz. </li>
-          <li class="nav-item social mb-2">
+          <li class="nav-item social mb-2 mt-2">
             <img src="../user/img/socials/facebook.png" alt="" />
             <img src="../user/img/socials/instagram.png" alt="" />
             <img src="../user/img/socials/in.png" alt="" />
@@ -18,37 +17,39 @@
       </div>
 
       <div class="col mb-5">
-        <h5>Destek</h5>
+        <h5 key="footerSupport">Hakkımızda</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kadromuz</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kariyer</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Bloglar</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Güvenlik</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport1" class="nav-link p-0">Kadromuz</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport2" class="nav-link p-0">Kariyer</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport3" class="nav-link p-0">Partners</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport4" class="nav-link p-0">Basında Dialysing</a></li>
         </ul>
       </div>
 
       <div class="col mb-5">
-        <h5>Hizmetler</h5>
+        <h5 key="footerServices">Yardım</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Klinik Yönetimi</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Haberler</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Etkinlikler</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">İletişim</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices1" class="nav-link p-0">Bloglar</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices2" class="nav-link p-0">FAQ</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices3" class="nav-link p-0">Trust & Safety (Güvenilirlik)</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices4" class="nav-link p-0">İletişim</a></li>
         </ul>
       </div>
 
       <div class="col mb-5">
-        <h5>Güvenlik</h5>
+        <h5 key="footerSecurity">Politikalar</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kişisel Sözleşmeler</a></li>
-          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Gizlilik Sözleşmeler</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity1" class="nav-link p-0">Gizlilik Politikası</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Kişisel Verilerin Korunması</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Kullanım Koşulları</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Cookie Politikası</a></li>
         </ul>
       </div>
 
       <!-- <div class="col-lg-3 mb-3">
         <form>
-          <h5>Abonelikler</h5>
-          <p class="text-white">Son gelişmelerden haberdar olmak için abone olun.</p>
+          <h5 key="footerSubscription">Abonelikler</h5>
+          <p key="footerSubscription1" class="text-white">Son gelişmelerden haberdar olmak için abone olun.</p>
           <div class="form-group bottom footer-input">
             <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="dialysing@demo.com.tr" />
             <img src="../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
@@ -56,8 +57,9 @@
         </form>
       </div> -->
     </div>
+
     <div class="d-flex justify-content-between mt-3 py-4 border-top">
-      <p class="text-secondary">&copy; 2021 Dialysing.com. Her hakkı saklıdır.</p>
+      <p class="text-secondary" key="footerText">&copy; 2021 Dialysing.com. Her hakkı saklıdır.</p>
     </div>
   </div>
 </footer>
