--- a/src/views/user/partials/footer.ejs
+++ b/src/views/user/partials/footer.ejs
@@ -17,30 +17,32 @@
       </div>
 
       <div class="col mb-5">
-        <h5 key="footerSupport">Destek</h5>
+        <h5 key="footerSupport">Hakkımızda</h5>
         <ul class="nav flex-column">
           <li class="nav-item mb-1"><a href="#" key="footerSupport1" class="nav-link p-0">Kadromuz</a></li>
           <li class="nav-item mb-1"><a href="#" key="footerSupport2" class="nav-link p-0">Kariyer</a></li>
-          <li class="nav-item mb-1"><a href="#" key="footerSupport3" class="nav-link p-0">Bloglar</a></li>
-          <li class="nav-item mb-1"><a href="#" key="footerSupport4" class="nav-link p-0">Güvenlik</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport3" class="nav-link p-0">Partners</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSupport4" class="nav-link p-0">Basında Dialysing</a></li>
         </ul>
       </div>
 
       <div class="col mb-5">
-        <h5 key="footerServices">Hizmetler</h5>
+        <h5 key="footerServices">Yardım</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" key="footerServices1" class="nav-link p-0">Klinik Yönetimi</a></li>
-          <li class="nav-item mb-1"><a href="#" key="footerServices2" class="nav-link p-0">Haberler</a></li>
-          <li class="nav-item mb-1"><a href="#" key="footerServices3" class="nav-link p-0">Etkinlikler</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices1" class="nav-link p-0">Bloglar</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices2" class="nav-link p-0">FAQ</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerServices3" class="nav-link p-0">Trust & Safety (Güvenilirlik)</a></li>
           <li class="nav-item mb-1"><a href="#" key="footerServices4" class="nav-link p-0">İletişim</a></li>
         </ul>
       </div>
 
       <div class="col mb-5">
-        <h5 key="footerSecurity">Güvenlik</h5>
+        <h5 key="footerSecurity">Politikalar</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" key="footerSecurity1" class="nav-link p-0">Kişisel Sözleşmeler</a></li>
-          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Gizlilik Sözleşmeler</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity1" class="nav-link p-0">Gizlilik Politikası</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Kişisel Verilerin Korunması</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Kullanım Koşulları</a></li>
+          <li class="nav-item mb-1"><a href="#" key="footerSecurity2" class="nav-link p-0">Cookie Politikası</a></li>
         </ul>
       </div>
 
