--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -29,7 +29,7 @@
       <div class="col mb-5">
         <h5 key="footerServices">Yardım</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-1"><a href="#" key="footerServices1" class="nav-link p-0">Bloglar</a></li>
+          <li class="nav-item mb-1"><a href="/blogs" key="footerServices1" class="nav-link p-0">Bloglar</a></li>
           <li class="nav-item mb-1"><a href="#" key="footerServices2" class="nav-link p-0">FAQ</a></li>
           <li class="nav-item mb-1"><a href="#" key="footerServices3" class="nav-link p-0">Trust & Safety (Güvenilirlik)</a></li>
           <li class="nav-item mb-1"><a href="#" key="footerServices4" class="nav-link p-0">İletişim</a></li>
