change checkbox on register page

--- a/src/views/user/pages/verify.ejs
+++ b/src/views/user/pages/verify.ejs
@@ -40,7 +40,7 @@
                                         tıklayarak üyeliğinizi tamamladıktan sonra
                                         giriş yapabilirsiniz.</p>
                                     <div class="tm-button-next left">
-                                        <a href="../index2.html" class="btn-second">Anasayfa</a>
+                                        <a href="/" class="btn-second">Anasayfa</a>
                                     </div>
                                 </div>
                             </div>
