--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -61,7 +61,7 @@
               </div>
               <div class="form-box">
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked required />
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                   <label class="form-check-label selected" for="flexCheckChecked"> Evet, lütfen beni Dialysing.com'daki seyahat fırsatları, ipuçları ve yeni özellikler hakkında bilgilendirin </label>
                 </div>
                 <div class="form-group not-border checkbox">
