add registesr giriş yap button

--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -33,7 +33,7 @@
           <!-- fieldsets -->
           <div class="card-register px-0 pt-4 pb-0 mt-3 mb-3">
             <div class="title">Kayıt Ol</div>
-            <div class="sub-menu">Zaten üye misiniz? <a href="">Giriş Yapın</a></div>
+            <div class="sub-menu">Zaten üye misiniz? <a href="" type="button" key="login" data-bs-toggle="modal" data-bs-target="#loginModal">Giriş Yapın</a></div>
             <form class="tm-form-wide" action="/register" method="POST"> 
               <div class="error-handling">
                 <% if (locals.validationErrors != null) { %> <%- include('../partials/error-message') %> <% } %>
@@ -72,6 +72,40 @@
               <div class="tm-button-next left">
                 <button type="submit" class="btn-second">Sonraki Adım</button>
               </div>
+              <!-- Modal -->
+              <div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false"
+              tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header"> 
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <form class="tm-form" action="/login" method="POST">
+                    <div key="login" class="form-title text-center" >Giriş Yap</div>
+                    <div class="form-group">
+                      <label key="emailAddress" for="login-email">Email Adresi</label>
+                      <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
+                    </div>
+                    
+                    <div class="form-group password">
+                      <label key="password" for="login-password">Şifrenizi Giriniz</label>
+                       <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
+                      <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                     </div>
+                     
+                    <div class="links">
+                      <div class="form-group not-border checkbox">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
+                        <label class="form-check-label" key="rememberMe" for="flexCheckChecked">Beni Hatırla </label>
+                      </div>
+                      <a key="passwordFind" href="#">Şifremi Unuttum</a>
+                    </div>
+                    <button type="submit" key="login" class="btn btn-second">Giriş Yap</button>
+                    <div key="accountInformation" class="link">Hesabınız ile birlikte,<a href="#"> Şartlar ve Koşullar ve Gizlilik Politikası & Kişisel Verilerin İşlenmesine</a> onay verilir.</div>
+                  </form> 
+                </div>
+              </div>
+            </div> 
             </form>
           </div>
         </div>
