--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -52,8 +52,8 @@
               </div>
               <div class="form-group password">
                 <label for="login-password">Şifrenizi Giriniz</label>
-                <input type="password" class="form-control" id="password" name="password" value="<%- typeof password != 'undefined' ? password : '' %>" placeholder="Şifreniz" />
-                <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                <input type="password" class="form-control password" id="password" name="password" value="<%- typeof password != 'undefined' ? password : '' %>" placeholder="Şifreniz" />
+                <img id="register-degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
               </div>
               <div class="form-group">
                 <label for="tel">Telefon Numaranız</label>
@@ -88,6 +88,12 @@
                     </div>
                     
                     <div class="form-group password">
+                      <label key="password" for="login-password">Şifrenizi Giriniz</label>
+                       <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
+                      <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                     </div>
+                     
+                     <div class="form-group password">
                       <label key="password" for="login-password">Şifrenizi Giriniz</label>
                        <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
                       <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
