--- a/src/views/clinic-panel/pages/clinic-activation.ejs
+++ b/src/views/clinic-panel/pages/clinic-activation.ejs
@@ -32,7 +32,7 @@
               <div class="col-12">
                 <img src="../user/img/register/done.png" alt="Icon Done" />
                 <div class="title">Kayıt İşleminiz Tamamlandı</div>
-                <a href="" class="sub-menu">dialysing@demo.com</a>
+                <input type="email" class="sub-menu">dialysing@demo.com</input>
                 <p>Mail adresinize gelen aktivasyon linkine tıklayarak üyeliğinizi tamamladıktan sonra giriş yapabilirsiniz.</p>
               </div>
             </div>
