--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -42,6 +42,10 @@
                 <label for="name">Adınız Soyadınız</label>
                 <input type="text" class="form-control" id="nameSurname" name="nameSurname" value="<%- typeof nameSurname != 'undefined' ? nameSurname : '' %>" placeholder="Adınız Soyadınız" />
               </div>
+              <!-- <div class="form-group">
+                <label for="birthdate">Doğum Tarihiniz</label>
+                <input type="date" class="form-control" id="birthDate" name="birthDate" value="<%- typeof birthDate != 'undefined' ? birthDate : '' %>" placeholder="Doğum Tarihiniz" />
+              </div>  -->
               <div class="form-group">
                 <label for="birthdate">Doğum Tarihiniz</label>
                 <input type="date" class="form-control" id="birthDate" name="birthDate" value="<%- typeof birthDate != 'undefined' ? birthDate : '' %>" placeholder="Doğum Tarihiniz" />
@@ -93,11 +97,11 @@
                       <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                      </div>
                      
-                     <div class="form-group password">
+                     <!-- <div class="form-group password">
                       <label key="password" for="login-password">Şifrenizi Giriniz</label>
                        <input type="password" class="form-control password" name="password" placeholder="Şifreniz" />
                       <img id="degistir" src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
-                     </div>
+                     </div> -->
                      
                     <div class="links">
                       <div class="form-group not-border checkbox">
