change clinic card om single clinic

--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -836,8 +836,7 @@
           <div class="position-relative">
             <a href="./clinic.html"><img src="../user/img/custom/center-i.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" /></a>
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h5 class="tm-box-title">Türkmed</h5>
-              <p class="tm-box-text">Diyaliz Merkezi</p>
+              <h5 class="tm-box-title p-3">Türkmed Diyaliz Merkezi</h5> 
             </div>
           </div>
         </div>
@@ -848,8 +847,7 @@
           <div class="position-relative">
             <img src="../user/img/custom/center-ii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h5 class="tm-box-title">Sultanbeyli</h5>
-              <p class="tm-box-text">Diyaliz Merkezi</p>
+              <h5 class="tm-box-title p-3">Sultanbeyli Diyaliz Merkezi</h5> 
             </div>
           </div>
         </div>
@@ -860,8 +858,7 @@
           <div class="position-relative">
             <img src="../user/img/custom/center-iii.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Avrupa" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Bodrum</h4>
-              <p class="tm-box-text">Diyaliz Merkezi</p>
+              <h4 class="tm-box-title p-3">Bodrum Diyaliz Merkezi</h4> 
             </div>
           </div>
         </div>
@@ -872,8 +869,7 @@
           <div class="position-relative">
             <img src="../user/img/custom/center-iv.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom İstanbul - Anadolu" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Karşıyaka</h4>
-              <p class="tm-box-text">Diyaliz Merkezi</p>
+              <h4 class="tm-box-title p-3">Karşıyaka Diyaliz Merkezi</h4> 
             </div>
           </div>
         </div>
@@ -884,8 +880,7 @@
           <div class="position-relative">
             <img src="../user/img/custom/center-v.png" class="image-fluid card-img-top" width="100%" height="100%" alt="Custom Ankara" />
             <div class="position-absolute bottom-0 start-0 px-2">
-              <h4 class="tm-box-title">Milas</h4>
-              <p class="tm-box-text">Diyaliz Merkezi</p>
+              <h4 class="tm-box-title p-3">Milas Diyaliz Merkezi</h4> 
             </div>
           </div>
         </div>
