--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -56,7 +56,7 @@
 
         <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9">
           <div class="clinic-map tm-margin-b-1">
-            <!-- <div class="tm-section-title-2"><%- city  %>  İlinde <%- list.length %> Adet Diyaliz Merkezi Bulundu</div> -->
+            <div class="city-list"><%- city  %>  İlinde <%- list.length %> Adet Diyaliz Merkezi Bulundu</div>
             <!-- <div class="clinic-map-open">
               <button class="btn-second" data-toggle="modal" data-target="#mapModal">Harita Üzerinde Göster</button>
               
@@ -195,6 +195,7 @@
               </div>
             </div> -->
           </div>
+       
           <div class="clinic-filter tm-margin-b-1">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
